--- a/style.css
+++ b/style.css
@@ -247,10 +247,10 @@ breadcrumb
     margin-right:5px;
 }
 
-.mmm-breadcumb ul li a{
+.mmm-breadcrumb ul li a{
 }
 
-.mmm-breadcumb ul li span{
+.mmm-breadcrumb ul li span{
 }
 
 /*
