--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@ h1,h2,h3,h4,h5,h6{
     font-weight:normal;
 }
 
+.mmm-site-title{
+
+}
+
 .mmm-page-title{
 }
 
@@ -240,10 +244,6 @@ breadcrumb
     display:flex;
     flex-wrap:wrap;
 	list-style-type:none;
-}
-
-.mmm-breadcrumb ul li{
-    margin-right:2px;
 }
 
 .mmm-breadcrumb ul li{
