--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .mmm-site-title{
-
 }
 
 .mmm-page-title{
@@ -384,6 +383,9 @@ menu
 }
 
 .mmm-menu.mmm-menu--sidebar{
+}
+
+.mmm-menu.mmm-menu--footer{
 }
 
 .mmm-submenu{
