--- a/style.css
+++ b/style.css
@@ -350,12 +350,13 @@ pagination
     justify-content:center;
     align-items:center;
     height:40px;
-    width:100px;
+    width:auto;
     font-weight:bold;
     border-width:1px;
     border-style:solid;
     color:#FFF;
     background-color:lightgray;
+    padding:0 1em;
 }
 
 .mmm-pagination-single a:hover{
@@ -481,6 +482,7 @@ global menu
     position:absolute;
     top:100%;
     left:0;
+    z-index:9999;
     width:150%;
     color:#FFF;
     background-color:rgba(0,0,0,.7);
@@ -792,5 +794,45 @@ google map
         width:auto;
     }
 
+}
 
+/*
+
+slick
+
+*/
+
+.mmm-slider{
+}
+
+.mmm-slider-arrow{
+    position:absolute;
+    top:calc(50% - 15px);
+    cursor:pointer;
+    z-index:9998;
+}
+
+.mmm-slider-arrow:before{
+    content:"";
+    display:block;
+    width:30px;
+    height:30px;
+    border-top:2px solid lightgray;
+    border-right:2px solid lightgray;
+}
+
+.mmm-slider-arrow--prev{
+    left:30px;
+    transform:rotate(-135deg);
+}
+
+.mmm-slider-arrow--next{
+    right:30px;
+    transform:rotate(45deg);
+}
+
+@media screen and (max-width:768px){
+    .mmm-slider-arrow{
+        display:none !important;
+    }
 }
