--- a/template/contactform.html
+++ b/template/contactform.html
@@ -23,10 +23,13 @@
 <div class="mmm-contactform-input">[mwform_text name="your-address" size="60"]</div>
 </div>
 <div class="mmm-contactform-field">
-<label class="mmm-contactform-label"><span class="mmm-contactform-title">セレクト</span><span class="mmm-contactform-require">必須</span></label><div class="mmm-contactform-input">[mwform_select name="your-select" children=":---,1,2,3,4,その他" post_raw="true"]</div>
+<label class="mmm-contactform-label"><span class="mmm-contactform-title">セレクト</span><span class="mmm-contactform-require">必須</span></label><div class="mmm-contactform-input mmm-contactform-input--select">[mwform_select name="your-select" children=":---,1,2,3,4,その他" post_raw="true"]</div>
 </div>
 <div class="mmm-contactform-field">
 <label class="mmm-contactform-label"><span class="mmm-contactform-title">ラジオ</span><span class="mmm-contactform-require">必須</span></label><div class="mmm-contactform-input">[mwform_radio name="your-radio" children="1,2" post_raw="true"]</div>
+</div>
+<div class="mmm-contactform-field">
+<label class="mmm-contactform-label"><span class="mmm-contactform-title">チェックボックス</span><span class="mmm-contactform-require">必須</span></label><div class="mmm-contactform-input">[mwform_checkbox name="your-checkbox" children="1,2,3" post_raw="true"]</div>
 </div>
 <div class="mmm-contactform-field">
 <label class="mmm-contactform-label"><span class="mmm-contactform-title">お問い合わせ内容</span></label>
